Build three projects
1.Puzzle: Jar Library Shared between Api/Shape
2.Shape: Triangle Challenge
3.Api: Code Challenge for other

--- a/code-puzzle/pom.xml
+++ b/code-puzzle/pom.xml
@@ -7,5 +7,5 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>code-puzzle</artifactId>
-	<name>Code Puzzle</name>
+	<name>Code Puzzle Library</name>
 </project>
