--- a/code-puzzle/pom.xml
+++ b/code-puzzle/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.ts</groupId>
+		<groupId>org.tscode</groupId>
 		<artifactId>code-repository</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>code-puzzle</artifactId>
-	<name>Code Puzzle Library</name>
+	<name>Code Library</name>
 </project>
