--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 		<jdk.version>1.8</jdk.version>
 		<ajc.version>1.8</ajc.version>
 
+		<!-- Jetty For Google App Engine -->
+		<jetty.maven.plugin>9.3.8.v20160314</jetty.maven.plugin>
+		<appengine.maven.plugin>1.0.0</appengine.maven.plugin>
 		<!-- JUnit Version -->
 		<junit.version>4.12</junit.version>
 
@@ -106,6 +109,10 @@
 		<!-- http://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 	</properties>
+	<prerequisites>
+		<!-- Minimum maven version -->
+		<maven>3.3.9</maven>
+	</prerequisites>
 	<dependencies>
 		<!-- ==================== Shared For each module ================== -->
 		<!-- JUnit for testing -->
@@ -449,5 +456,62 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-dependency-plugin
+										</artifactId>
+										<versionRange>
+											[2.8,)
+										</versionRange>
+										<goals>
+											<goal>
+												copy-dependencies
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.felix
+										</groupId>
+										<artifactId>
+											maven-bundle-plugin
+										</artifactId>
+										<versionRange>
+											[3.0.1,)
+										</versionRange>
+										<goals>
+											<goal>manifest</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
