Config Server Host

--- a/code-api/src/main/resources/config.properties
+++ b/code-api/src/main/resources/config.properties
@@ -6,3 +6,7 @@ file.config.errors=/config/errors.properties
 # Vertx Options
 # ---------------------------------------------------------
 file.vertx.opts=/config/vertx.properties
+# ---------------------------------------------------------
+# Server Options
+# ---------------------------------------------------------
+file.server.opts=/config/server.properties
