--- a/code-api/pom.xml
+++ b/code-api/pom.xml
@@ -53,6 +53,11 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-codec-http</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
